# core

./: Cargo.toml  README.md
block/: Cargo.toml
block/src/: block.rs  encode.rs  execute.rs  hash.rs  lib.rs  receipts_root.rs  result.rs
block/tests/: block_execution.rs  block_hash.rs
execution/: Cargo.toml
execution/src/: error.rs  lib.rs  plan.rs
execution_engine/: Cargo.toml
execution_engine/src/: context.rs  engine.rs  error.rs  lib.rs  reference.rs
ext_tx/: Cargo.toml
ext_tx/src/: external_tx.rs  lib.rs  prepare.rs
protocol/: Cargo.toml
protocol/src/: error.rs  lib.rs  process.rs
protocol/tests/: pipeline.rs
state/: Cargo.toml
state/src/: balance.rs  error.rs  lib.rs  nonce.rs  object.rs  state_root.rs  store.rs
state_diff/: Cargo.toml
state_diff/src/: commit.rs  diff.rs  error.rs  lib.rs
tx/: Cargo.toml
tx/src/: cell.rs  error.rs  lib.rs  transaction_cell.rs
types/: Cargo.toml
types/src/: address.rs  epoch.rs  hash.rs  lib.rs  object_id.rs  slot.rs
