[package]
name = "axiom-protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axiom-types = { path = "../types" }
axiom-state = { path = "../state" }
axiom-tx = { path = "../tx" }
axiom-ext_tx = { path = "../ext_tx" }
axiom-execution = { path = "../execution" }
axiom-execution_engine = { path = "../execution_engine" }
axiom-state_diff = { path = "../state_diff" }



